--- a/angular-quickstart/package.json
+++ b/angular-quickstart/package.json
@@ -29,7 +29,9 @@
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.39",
-    "zone.js": "^0.6.25"
+    "zone.js": "^0.6.25",
+    "angular2-toaster": "^1.0.1",
+    "ng2-slim-loading-bar": "^2.0.4"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.34",
